--- a/rapport_20_novembre/rapport_2.tex
+++ b/rapport_20_novembre/rapport_2.tex
@@ -39,7 +39,7 @@ We need to design a system that accomplishes two main goals :
 
 \begin{enumerate}
 \item{Isolate the content of a secure network from the outside world, while allowing data to be transferred from the outside world to that secure network.}
-\item{Allow users of the system to be able to consult an administration web page, from the inside the secure network, in order to perform system management operations}
+\item{Allow users of the system to consult an administration web page, from inside the secure network, in order to perform system management operations}
 \end{enumerate}
 
 For this project, the general solution is imposed and should be a data diode, which we will describe in section~\ref{sec:data-diode}.
@@ -68,16 +68,31 @@ A data diode is a one-way data transfer system. It is composed of two server: on
 \end{figure}
 
 \subsection{Applications}
-With this data diode, we decided to keep things simple and to focus on proposing the two following services: a File Transfer service, as well as a data-diode management service. 
+With this data diode, we decided to keep things simple and to focus on proposing the two following services: a File Transfer service, as well as a data-diode administration service. 
 Other applications such as email management and web browsing will be considered for future versions of the data-diode.
 
 \subsubsection{File Transfer}
-The main application is a file transfer service that will enable files to be pushed from the outside network into the inside network, through the use of the File Transfer Protocol (FTP).
+The main application is a file transfer service that will enable files to be pushed from the outside network into the inside network, through the use of the File Transfer Protocol (FTP).\\
 
-\subsubsection{Administration and Management}
+The management of the FTP accounts is handled by administrators.
 
+\subsubsection{Administration and User Management}
+One of the requirements of this project is the use of a web interface for managing the data diode. We will implement an HTTP server, on the internal side of the data diode. This administration interface will allow administrators to monitor file transfers, create or delete FTP accounts for the people who will provide data to the data diode as well as allow the start and stop of the data diode.
 
-\subsection{Architecture}
+\subsection{Physical Architecture}
+TODO: virtual machines or containers, instanciating the 2 sides of the data diode (sender and receiver) :
+\begin{itemize}
+\item{2 physical servers, having each 2 ethernet network interface, and therefore 2 IP addresses}
+
+\end{itemize}
+
+\subsection{Software architecture}
+TODO
+\begin{itemize}
+\item{1 FTP servers (sender). The sender must be able to receive PUT requests from the outside.}
+\item{An UDP client (on the \textit{sender} side) that will send files over UDP}
+\item{An UDP server (on the \textit{receiver }side)} that will receive the files pushed over TCP
+\end{itemize}
 \subsubsection{Technical Aspects}
 A data diode is composed of two servers linked by a one-way communication channel. The server, that we'll call the \textit{sender}, receives data from the external network with the TCP protocol. The second server, called the \textit{receiver}, uses the TCP protocol to send data to the secure network too. The same conclusion can then be applied to those data.\\
 
@@ -85,6 +100,23 @@ The one-way communication channel between the two sides of the data-diode forbid
 
 
 \section{Users}
+\subsection{Simple Users}
 
-\section{Data Diode Administration and Management}
+\subsection{Administrators}
+
+\subsection{Data Providers}
+Data providers are users from outside the secure network, that are allowed to push files into the secure network. To identify data providers, a public key infrastructure will be used.
+
+\section{Administration and Management}
+\subsection{Simple Users}
+
+\subsection{Administrators}
+TODO:
+Administrators can :
+\begin{itemize}
+\item{Shut down the data diode, through the administration page}
+\item{Start the data-diode}
+\item{Manage users : creation, deletion, user privileges modification}
+\item{Manage Data providers : creation and deletion of profile.}
+\end{itemize}
 \end{document}
