--- a/rapport_20_novembre/rapport_2.tex
+++ b/rapport_20_novembre/rapport_2.tex
@@ -35,6 +35,7 @@ The problem with that method is that it can compromise the security of the secur
 As a consequence, we need to build a solution that prevents data leaks while allowing the transfer of files from the outside network into the secure network.
 
 \section{Goals of this project}
+\label{sec:goals}
 Goals define the general direction of what the organization aims to accomplish, in the long term. Here, we wish to design a system that accomplishes two main goals :
 
 \begin{enumerate}
@@ -46,6 +47,7 @@ For this project, the general solution is imposed and should be a data diode, wh
 
 
 \section{Objectives}
+\label{sec:objectives}
 Objectives can be considered as the building parts goals. They are concrete and can be achieved by following a certain number of steps. Achieving all the objectives should translate to achieving all the goals.\\
 
 We identify the following objectives:
@@ -66,7 +68,7 @@ The following elements are in scope, which means that it is our responsibility t
 
 \begin{itemize}
 \item{The availability of the file transfer service}
-\item{The confidentiality of user data and credentials when interacting with the data diode}
+\item{The confidentiality of user data and credentials when interacting with the data diode (see section \ref{sec:data-diode})}
 \item{The confidentiality of the data within the secure network. There should be no data leak.}
 \end{itemize}
 
@@ -80,22 +82,22 @@ The following elements are out of scope. This means that the security of these e
 \item{The security within the secure network, such as the presence of malwares or other viruses}
 \end{itemize}
 
-\section{Security requirements}
-TODO : dans cette section, on va bien spécifier quelles sont les exigences demandées au niveau de la sécurité. C'était une des remarque qu'on avait fait à mon groupe l'an passé : on avait proposé une solution, mais on ne s'était pas basés sur des requirements pour faire notre choix quand à la solution. Donc ils nous avaient demandé : ok, vous utilisez cette technologie là, mais pourquoi? On répondait "ah ben ça va nous permettre ceci et celà". Et il nous disaient "mais c'est mis nulle part dans votre rapport que "ceci et cela" est une exigence.\\
-
-Donc en gros, notre solution semblait arbitraire, car elle n'était pas basées sur une réponse à des exigences. Ce qu'ils voulaient, c'était qu'on identifie toutes les exigences au niveau de la sécurité, et qu'ensuite, on dise "voilà, selon les exigences X et Y qu'il nous faut respecter, nous décidons d'utiliser la solution B plutot que la solution A, car c'est la seule qui respecte toutes les exigences."
-
-
-
 
 \section{Data Diode}
 \label{sec:data-diode}
-A data diode is a one-way data transfer system. It is composed of two server: one server communicates with the outside network and the other one communicate with the secure network. Moreover, these two servers are connected to one another through a single unidirectional fiber optics cable. The cable going in the other direction has been physically cut. As a consequence, data can only flow in one direction, which guarantees the "one-way" property.
+Based on the goals and objectives specified respectively in section \ref{sec:goals} and section \ref{sec:objectives} and on the project requirements, we are going to implement a \textit{data diode}.\\
+
+Just like a diode only conduct current in one direction, a data diode is a networking device that only allows data to flow in one direction. It is composed of two physical servers: one server communicates with the outside network and the other one communicate with the secure network. The two servers are connected together by a single unidirectional fiber optics cable.\\
+
+A fiber optic connection normally uses two cables: one for each direction. In the case of 	 data diode, only one cable is used, allowing the data to flow in one direction. The cable going in the other direction is physically cut. As a consequence, data going through a data diode can only flow in one direction, which is required by the goals defined in section \ref{sec:goals}.
 
 \begin{figure}
 	\includegraphics[scale=0.7]{img/network.png}
 	\caption{High level architecture of a data diode.}
 \end{figure}
+
+\subsection{Simulating a data diode}
+At first, instead of using a real data diode, we are going to build the prototype of a data diode by simulating the actual system through software and the unidirectional flow of the data by modifying the IP table in a way that will allow traffic in one direction, and drop all packets going in the other direction.
 
 \subsection{Applications}
 With this data diode, we decided to keep things simple and to focus on proposing the two following services: a File Transfer service, as well as a data-diode administration service. 
