Just testing somethings. Don't worry.

--- a/rapport_20_novembre/rapport_2.tex
+++ b/rapport_20_novembre/rapport_2.tex
@@ -179,7 +179,7 @@ FTP users operate from outside the secure network and are allowed to push files 
 
 \subsubsection{Administrators}
 
-TODO:
+TODO xx:
 Administrators can :
 \begin{itemize}
 \item{Shut down the data diode, through the administration page}
